# python-unstructured

./: .gitignore  01-read.ipynb  01_read_pdf.ipynb  02_read_json.ipynb  Makefile  install.sh  main.py  pyproject.toml  read.py  requirements.txt
docs/: 01_read_pdf.md  02_read_json.md
