[project]
name = "python-unstructured"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "pandas>=2.3.3",
    "unstructured[pdf]>=0.18.21",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-vim>=4.1.4",
]
